modules/dxp/apps/commerce/commerce-theme-lotus/src/css/partials/_navbar.scss
#navigation {
	@include sm {
		margin-left: 105px;
	}

	.portlet-topper {
		left: auto;
		right: auto;
		z-index: 1035;
	}

	.portlet {
		margin: 0;
		position: static;

		&:hover, &.focus {
			z-index: 1035;
		}
	}

	.dropdown-menu {
		@include sm {
			border-width: 0;
			box-shadow: none;
			top: 94%;
		}
	}
}

.user-avatar-image {
	display: inline-block;
	vertical-align: middle;
}

.user-full-name {
	display: inline-block;

	@include sm {
		display: none;
	}
}

.navbar-ecommerce {
	border-bottom: 1px solid $brand-border-color;
	min-height: 98px;
	padding: 17px 16px;

	.navbar-blank {
		a, .link-list a {
			color: $brand-text-color;
			font-size: 14px;
			font-weight: 200;

			&:focus, &:hover {
				background-color: transparent;
				color: $brand-color;
			}
		}

		& > li:hover > a:after {
			background: $brand-color;
			content: '';
			height: 3px;

			@include position(absolute, null 15px 12px 15px);
		}

		.dropdown-header, .dropdown-toggle {
			color: $brand-text-color;
			text-transform: uppercase;
		}
	}

	.portlet-user-personal-bar {
		@include sm {
			padding: 16px;
		}
	}
}

#banner {
	position: relative;

	.portlet-content {
		padding: 0;
	}

	.navbar {
		margin-bottom: 0;
		position: static;

		.custom-logo {
			color: $brand-dark;
			line-height: 28px;

			.site-name {
				margin-left: 16px;
			}
		}
	}

	.navbar-nav {
		@media (max-width: $grid-float-breakpoint-max) {
			margin: 5.75px 0;
		}

		> li {
			position: static;

			> a {
				color: $brand-dark;
			}
		}
	}

	.default-logo img {
		max-height: 68px;
	}
}

.position-anchored {
	@include sm {
		min-width: 320px;
		z-index: 1050;

		@include position(absolute, 60px 0 null null);
	}

	@media (max-width: $grid-float-breakpoint-max) {
		display: block;
		height: auto;
	}

	&.position-anchored-left {
		min-width: 180px;
		right: 64px;
		top: -10px;
	}
}

#collapseSearch {
	.field-wrapper {
		display: none;
	}

	.input-text-wrapper, .portlet {
		margin-bottom: 0;
	}
}

.navbar-recursive {
	.lexicon-icon {
		@include size(25px, 25px);
	}

	.lexicon-icon-search {
		display: none;
	}

	.collapsed {
		.lexicon-icon-search {
			display: inline-block;
		}

		.lexicon-icon-close {
			display: none;
		}
	}
}

.navbar-toggle {
	.icon-bar {
		@include transition(all 0.4s ease-in-out);
	}

	&[aria-expanded="true"] {
		.icon-bar {
			margin-top: -2px;
		}
	}
}

